# wizo

./: Cargo.toml  Makefile.toml  index.html
assets/: chunks.ron  map1.chunkmap
assets/aseprite/: boundary.aseprite  bush.aseprite  dirt-path.aseprite  flower-1.aseprite  gold-rimmed-box.aseprite  palette.aseprite  sword-angled.aseprite  sword.aseprite  walking-up.aseprite
assets/sprites/: dirt-path.aseprite  flower-1.aseprite  gold-rimmed-box.aseprite  sign.aseprite  sword.aseprite  tree.aseprite  walking-down.aseprite  walking-side.aseprite
public/: wasm.js
src/: animation.rs  animations.rs  chunks.rs  components.rs  constants.rs  game.rs  hitboxes.rs  input.rs  main.rs  menu.rs  movement.rs  player.rs  resources.rs  text_box.rs  tile_factory.rs
