[package]
name = "wizo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
lazy_static = "1.4.0"
ron = "0.7"
serde = { version = "1", features = ["derive"] }
anyhow = "*"
bevy_asset_ron = "0.3.0"
bevy_ninepatch = "0.6.0"
